# solitaire-rs

./: Cargo.toml  README.md
crates/solitaire-core/: Cargo.toml
crates/solitaire-core/src/: card.rs  column.rs  error.rs  foundation.rs  lib.rs  pile.rs  stock.rs  waste.rs
crates/solitaire-engine/: Cargo.toml
crates/solitaire-engine/src/: action.rs  actions_results.rs  error.rs  game.rs  game_state.rs  lib.rs
crates/solitaire-gui/: Cargo.toml  Trunk.toml  index.html
crates/solitaire-gui/assets/: manifest.json  sw.js
crates/solitaire-gui/src/: app.rs  app_stats.rs  card_assets.rs  card_textures.rs  layout.rs  lib.rs  logger.rs  main.rs  ui_element.rs
crates/solitaire-gui/src/modes/: mod.rs  mode.rs  user_play.rs
docs/: index.html  solitaire-gui.js
