[workspace]
members = [
    "crates/solitaire-core",
    "crates/solitaire-engine",
    "crates/solitaire-gui",
]
resolver = "2"

[workspace.dependencies]
serde = {version = "1.0.228", features = ["derive"]}
enum-iterator = "2.3.0"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
getset = "0.1.6"
